

*** HOL ***

* new force_tac (and its derivations Force_tac, force) 
  combines rewriting and classical reasoning (and whatever other tools)
  similarly to auto_tac, but is aimed to solve the given subgoal totally.

* added option_map_eq_Some to simpset(), option_map_eq_Some RS iffD1 to claset()
* New directory HOL/UNITY: Chandy and Misra's UNITY formalism

* split_all_tac is now much faster and fails if there is nothing to split
  split_all_tac has moved within claset() from usafe wrappers to safe wrappers,
  which means that !!-bound variables are splitted much more aggressively.
  If this splitting is not appropriate, use delSWrapper "split_all_tac".

* added disj_not1 = "(~P | Q) = (P --> Q)" to the default simpset

* HOL/Arithmetic
  
  - removed 'pred' (predecessor) function

  - generalized some theorems about n-1

  - Many new laws about "div" and "mod"

  - New laws about greatest common divisors (see theory ex/Primes)

* HOL/Relation: renamed the relational operatotr r^-1 "converse" instead of
  "inverse"

* recdef can now declare non-recursive functions, with {} supplied as the 
  well-founded relation

* Simplifier:

 -The rule expand_if is now part of the default simpset. This means that
  the simplifier will eliminate all ocurrences of if-then-else in the
  conclusion of a goal. To prevent this, you can either remove expand_if
  completely from the default simpset by `Delsplits [expand_if]' or
  remove it in a specific call of the simplifier using
  `... delsplits [expand_if]'.
  You can also add/delete other case splitting rules to/from the default
  simpset: every datatype generates a suitable rule `split_t_case' (where t
  is the name of the datatype).

 -Asm_full_simp_tac is now more aggressive:
  1. It will sometimes reorient premises if that increases their power to
     simplify.
  2. It does no longer proceed strictly from left to right but may also
     rotate premises to achieve further simplification.